package sir.smarthome.observers;

public interface Observer {
    void update(int temperature);
}
