package sir.smarthome.reports;

public class ReportGenerator {
}
