package sir.smarthome.reports;

public interface ReportStrategy {
    String generateReport();
}
