package sir.smarthome.residents;

public enum ResidentType {HUMAN,CAT}
